Fix visual bug with line-clamp in Safari across the main site (#220)
## What is the goal of this PR?

Blocks inside of line-clamp are visible on Safari.
Now line-clamp has max-height specified which makes overflowing blocks
hidden.

## What are the changes implemented in this PR?

- max-height is added for elements with line-clamp
- max-height calculated by multiplying line-height and line number

It is not perfect as we don't have access to line-height and it is
specified second time for max-height.

--- a/website/src/framework/link-panels/link-panels.component.scss
+++ b/website/src/framework/link-panels/link-panels.component.scss
@@ -115,6 +115,7 @@
                 line-clamp: 7;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
+                max-height: 24px * 7;
             }
         }
 
@@ -129,6 +130,7 @@
                 margin-top: 8px;
                 -webkit-line-clamp: 3;
                 line-clamp: 3;
+                max-height: 18px * 3;
             }
         }
     }
